# proj-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  reference-compat.yml
docs/: benchmark-report.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/crs_parse/: proj_utm  projjson_geographic
fuzz/corpus/gtx_parse/: minimal.gtx
fuzz/corpus/projjson_roundtrip/: crash-ff6f16784f893d3627140c19de4634fb0fae16fe  seed-2056  seed-2154  seed-28992  seed-30200  seed-3035  seed-3078  seed-32618  seed-32662  seed-3395  seed-3408  seed-3413  seed-3857  seed-4258  seed-4326  seed-5070  seed-7415  seed-7678
fuzz/corpus/wkt_roundtrip/: crash-001b3216865c4a1c208737d7624871ac1ae4497a  seed-wkt2-2056  seed-wkt2-2154  seed-wkt2-28992  seed-wkt2-30200  seed-wkt2-3035  seed-wkt2-3078  seed-wkt2-32618  seed-wkt2-32662  seed-wkt2-3395  seed-wkt2-3408  seed-wkt2-3413  seed-wkt2-3857  seed-wkt2-4258  seed-wkt2-4326  seed-wkt2-5070  seed-wkt2-7415  seed-wkt2-7678
fuzz/fuzz_targets/: crs_parse.rs  geotiff_parse.rs  gtx_parse.rs  ntv2_parse.rs  projjson_roundtrip.rs  wkt_roundtrip.rs
gen-reference/: Cargo.toml
gen-reference/src/: gen_registry.rs  gen_selection_parity.rs  inspect_schema.rs  main.rs
proj-core/: Cargo.toml
proj-core/benches/: transform_bench.rs  transform_compare_bench.rs
proj-core/data/: epsg.provenance.json
proj-core/src/: coord.rs  crs.rs  datum.rs  ellipsoid.rs  epsg_db.rs  error.rs  geocentric.rs  grid.rs  helmert.rs  lib.rs  operation.rs  registry.rs  registry_data.rs  selector.rs  transform.rs
proj-core/src/projection/: albers_equal_area.rs  american_polyconic.rs  azimuthal_equidistant.rs  cassini_soldner.rs  colombia_urban.rs  equal_earth.rs  equidistant_cylindrical.rs  hotine_oblique_mercator.rs  krovak.rs  laborde.rs  lambert_azimuthal_equal_area.rs  lambert_conformal_conic.rs  mercator.rs  mod.rs  oblique_stereographic.rs  polar_stereographic.rs  transverse_mercator.rs  web_mercator.rs
proj-core/src/transform/: geo_adapters.rs  pipeline.rs  selection.rs  tests.rs  vertical.rs
proj-core/tests/: api_compatibility.rs  grad_units.rs  live_c_proj_parity.rs  live_c_proj_parity_3d.rs  property_tests.proptest-regressions  property_tests.rs  rdnaptrans.rs  reference_values.rs  registry_only_audit.rs  selection_parity.rs  three_d_api.rs
proj-core/tests/common/: c_proj_ffi.rs
proj-epsg-format/: Cargo.toml
proj-epsg-format/src/: lib.rs
proj-wkt/: Cargo.toml
proj-wkt/src/: lib.rs  proj_string.rs  projjson.rs  projjson_writer.rs  semantics.rs  wkt.rs  wkt2_writer.rs  wkt_writer.rs
scripts/: run-reference-benchmarks.sh  run-reference-parity.sh  verify-release-packaging.sh
testdata/: reference_values.json  selection_parity.json
