[workspace]
members = ["proj-core", "proj-wkt"]
exclude = ["gen-reference"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/roteiro-gis/proj-rust"
homepage = "https://github.com/roteiro-gis/proj-rust"
