[workspace]
members = ["proj-core", "proj-epsg-format", "proj-wkt"]
exclude = ["gen-reference", "fuzz"]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/roteiro-gis/proj-rust"
homepage = "https://github.com/roteiro-gis/proj-rust"

[workspace.dependencies]
proj-core = { version = "0.9.0", path = "proj-core" }
proj-epsg-format = { version = "0.9.0", path = "proj-epsg-format" }
