[package]
name = "proj-core"
description = "Pure-Rust coordinate transformation library with no C dependencies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/proj-core"
keywords = ["projection", "coordinates", "gis", "epsg", "transform"]
categories = ["science", "mathematics"]

[dependencies]
thiserror = "2"

[dependencies.rayon]
version = "1"
optional = true

[dependencies.geo-types]
version = "0.7"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "transform_bench"
harness = false

[features]
default = ["rayon", "geo-types"]
rayon = ["dep:rayon"]
geo-types = ["dep:geo-types"]
