[package]
name = "proj-core"
description = "Pure-Rust coordinate transformation library with no C dependencies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/proj-core"
keywords = ["projection", "coordinates", "gis", "epsg", "transform"]
categories = ["science", "mathematics"]

[dependencies]
proj-epsg-format.workspace = true
# Karney geodesics (pure Rust port of GeographicLib, the same algorithms C
# PROJ vendors); the oblique/equatorial ellipsoidal Azimuthal Equidistant
# projection is defined in terms of geodesic azimuth and distance.
geographiclib-rs = "0.2"
sha2 = "0.10"
smallvec = "1"
thiserror = "2"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.rayon]
version = "1"
optional = true

[dependencies.geo-types]
version = "0.7"
optional = true

[dependencies.proj]
version = "0.31"
features = ["bundled_proj"]
optional = true

[dependencies.proj-sys]
version = "0.27"
features = ["bundled_proj"]
optional = true

# Pure-Rust GeoTIFF/COG grid reader (PROJ-format datum-shift and geoid grids).
# default-features = false drops the HTTP (`cog`) path. Upstream's `local`
# feature gates the reader type that provides the in-memory `from_bytes`
# decoder used here; proj-core does not open GeoTIFF paths through that API.
# 0.6.1 replaced the C-backed `zstd-sys` with pure-Rust `ruzstd`, keeping the
# `geotiff` feature free of C dependencies and build scripts.
[dependencies.geotiff-reader]
version = "0.6.1"
default-features = false
features = ["local"]
optional = true

[dependencies.tiff-core]
version = "0.6.1"
optional = true

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "transform_bench"
harness = false

[[bench]]
name = "transform_compare_bench"
harness = false
required-features = ["c-proj-compat"]

[features]
default = ["rayon", "geo-types"]
rayon = ["dep:rayon"]
geo-types = ["dep:geo-types"]
c-proj-compat = ["dep:proj", "dep:proj-sys"]
# Read PROJ-format GeoTIFF datum-shift/geoid grids (e.g. RDNAPTRANS2018). Pulls
# in the geotiff-reader/tiff-core crates; off by default to keep the core build
# dependency-free.
geotiff = ["dep:geotiff-reader", "dep:tiff-core"]
# Serialize/Deserialize for coordinate and operation-metadata value types.
serde = ["dep:serde"]
