[package]
name = "proj-epsg-format"
description = "Binary format definition for proj-rust's embedded EPSG registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/proj-epsg-format"
keywords = ["epsg", "gis", "binary-format", "projection"]
categories = ["science", "encoding"]

[dependencies]
