[package]
name = "proj-wkt"
description = "WKT and PROJ string parser for proj-core CRS definitions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"

[dependencies]
proj-core = { path = "../proj-core" }
serde_json = "1"
thiserror = "2"
