[package]
name = "proj-wkt"
description = "WKT and PROJ string parser for proj-core CRS definitions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/proj-wkt"
keywords = ["projection", "crs", "wkt", "projjson", "gis"]
categories = ["science", "mathematics", "parser-implementations"]

[dependencies]
proj-core = { version = "0.1.1", path = "../proj-core" }
serde_json = "1"
thiserror = "2"
